Changed url , etc

--- a/website/templates/gallery.html
+++ b/website/templates/gallery.html
@@ -148,9 +148,8 @@
   
             <footer class="text-center small tm-footer">
             <p class="mb-0">
-            Copyright &copy; 2020 Company Name 
+            Copyright &copy; 2021 Company Name 
             
-            . <a rel="nofollow" href="https://www.tooplate.com" title="HTML templates">Link</a></p>
           </footer>
   
       </section>
@@ -204,7 +203,7 @@
           
       </script>
     <script>
-      let url = 'http://127.0.0.1:8000/'
+      let url = 'http://http://139.59.20.1/'
       $('#home').click(function(){
         window.location.href = url
       })
