--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -255,7 +255,6 @@
           <p class="mb-0">
           Copyright &copy; 2021 Company Name 
           
-          . <a rel="nofollow" href="https://www.tooplate.com" title="HTML templates">Link</a></p>
         </footer>
 
     </section>
@@ -453,8 +452,7 @@
       document.addEventListener('DOMContentLoaded',function(){
         $('ul.slick-dots').remove()
       })
-      let url = 'http://127.0.0.1:8000/'
-<!--        let url = 'http://192.168.1.15:8000/'-->
+      let url = 'http://http://139.59.20.1/'
       $('#making').click(function(){
         window.location.href = url + "making"
       })
