--- a/website/templates/making.html
+++ b/website/templates/making.html
@@ -151,10 +151,10 @@
           
         </div>
   
-            <footer class="text-center small tm-footer">
-            <p class="mb-0">
-                . <a rel="nofollow" href="https://www.tooplate.com" title="HTML templates">Link</a></p>
-            </footer>
+      	<footer class="text-center small tm-footer">
+          <p class="mb-0">
+          Copyright &copy; 2021 Company Name 
+        </footer>
 
       </section>
 
@@ -203,7 +203,7 @@
 
       </script>
     <script>
-      let url = 'http://127.0.0.1:8000/'
+      let url = 'http://http://139.59.20.1/'
       $('#home').click(function(){
         window.location.href = url
       })
@@ -216,5 +216,4 @@
       </script>
 </body>
 </html>
-Copyright &copy; 2020 Company Name
 
