Fixed stupid url mistake

--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -452,7 +452,7 @@
       document.addEventListener('DOMContentLoaded',function(){
         $('ul.slick-dots').remove()
       })
-      let url = 'http://http://139.59.20.1/'
+      let url = 'http://139.59.20.1/'
       $('#making').click(function(){
         window.location.href = url + "making"
       })
