--- a/website/templates/gallery.html
+++ b/website/templates/gallery.html
@@ -203,7 +203,7 @@
           
       </script>
     <script>
-      let url = 'http://http://139.59.20.1/'
+      let url = 'http://139.59.20.1/'
       $('#home').click(function(){
         window.location.href = url
       })
