--- a/website/templates/making.html
+++ b/website/templates/making.html
@@ -205,7 +205,7 @@
     <script>
       let url = 'http://139.59.20.1/'
       $('#home').click(function(){
-        window.location.href = url
+        window.location.href = url + '#infinite'
       })
       $('#wwd').click(function(){
         window.location.href = url + '#whatwedo'
