--- a/website/templates/gallery.html
+++ b/website/templates/gallery.html
@@ -35,7 +35,7 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ml-auto">
                            <li class="nav-item">
-                  <a class="nav-link tm-nav-link" href="/" id="home">Home</a>
+                  <a class="nav-link tm-nav-link" href="/" id="wwd">Home</a>
               </li>
               <li class="nav-item">
                   <a class="nav-link tm-nav-link" href="/" id="wwd">What We Do</a>
