testing home button 1.2

--- a/website/templates/gallery.html
+++ b/website/templates/gallery.html
@@ -204,7 +204,7 @@
       </script>
     <script>
       let url = 'http://139.59.20.1/'
-      $('.home').click(function(){
+      $('#home').click(function(){
         window.location.href = url + '#infinite'
       })
       $('#wwd').click(function(){
