testing home button 1.3

--- a/website/templates/gallery.html
+++ b/website/templates/gallery.html
@@ -24,7 +24,7 @@
 <body>
     <nav class="navbar navbar-expand-md tm-navbar scroll" id="tmNav">
         <div class="tm-next">
-          <a href="#infinite" class="navbar-brand" style="background: white;color: #369;width: 100%;padding-left: 10px;" class="home">
+          <a href="#infinite" class="navbar-brand" style="background: white;color: #369;width: 100%;padding-left: 10px;" id="home">
             Sanskar Handicrafts</a>
       </div> 
         <div class="container" style="display:grid; padding-left: 0; margin-left: 0;">   
@@ -35,7 +35,7 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ml-auto">
                            <li class="nav-item">
-                  <a class="nav-link tm-nav-link" href="#infinite" class="home">Home</a>
+                  <a class="nav-link tm-nav-link" href="#infinite" id="home">Home</a>
               </li>
               <li class="nav-item">
                   <a class="nav-link tm-nav-link" href="/" id="wwd">What We Do</a>
