--- a/website/templates/gallery.html
+++ b/website/templates/gallery.html
@@ -35,7 +35,7 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ml-auto">
                            <li class="nav-item">
-                  <a class="nav-link tm-nav-link" href="#infinite" id="home">Home</a>
+                  <a class="nav-link tm-nav-link" href="#infinite" id="home1">Home</a>
               </li>
               <li class="nav-item">
                   <a class="nav-link tm-nav-link" href="/" id="wwd">What We Do</a>
@@ -205,6 +205,9 @@
     <script>
       let url = 'http://139.59.20.1/'
       $('#home').click(function(){
+        window.location.href = url + '#infinite'
+      })
+      $('#home1').click(function(){
         window.location.href = url + '#infinite'
       })
       $('#wwd').click(function(){
