--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -84,6 +84,9 @@
     <section id="whatwedo" class="tm-section-pad-top" style="padding-top:50px; padding-bottom: 0px;">
       
       <div class="container">
+          <div class ='aaa'>
+            {{images}}
+          </div>
 
             <div class="row tm-content-box"><!-- first row -->
                 <div class="col-lg-12 col-xl-12">
