Fixed mobile issue of gallery

--- a/website/templates/gallery.html
+++ b/website/templates/gallery.html
@@ -14,7 +14,10 @@
     <link rel="stylesheet" href="{% static 'website/css/style.css' %}" />
     <style>
         .card-deck{
-            justify-content: space-around; padding-top:20px; padding-bottom:20px
+            justify-content: space-around;
+            padding-top:20px;
+            padding-bottom:20px;
+            max-width: none;
         }
         figure.effect-honey{
             max-width: none;
