Fixed email issue/ view all hover issue

--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -26,14 +26,11 @@
     transition: 0.6s;
   }
   #view:hover{
-    background-color:#FFF;
+    background-color:#38B;
     cursor: pointer;
   }
   #view > a{
     color: #FFF;
-  }
-  #view:hover > a{
-    color: #369;
   }
 </style>
   </head>
@@ -84,10 +81,6 @@
     <section id="whatwedo" class="tm-section-pad-top" style="padding-top:50px; padding-bottom: 0px;">
       
       <div class="container">
-          <div class ='aaa'>
-            {{images}}
-          </div>
-
             <div class="row tm-content-box"><!-- first row -->
                 <div class="col-lg-12 col-xl-12">
                     <div class="tm-intro-text-container">
