--- a/website/templates/mk1.html
+++ b/website/templates/mk1.html
@@ -5,9 +5,30 @@
 
 {% block body %}
 <div class="flex-box">
-    <div><img src="{% static 'website/img/making/fwdworkingpicture/20140307_123903.jpg' %}" alt="" class="flex-img"></div>
+    <div class="tm-gallery card">
+        <a href="{% static 'website/img/making/fwdworkingpicture/20140307_123903.jpg' %}">
+          <figure class="effect-honey card-img-top">
+            <img src="{% static 'website/img/making/fwdworkingpicture/20140307_123903.jpg' %}"alt="Image 1" class="img-fluid" style="width:400px;height:500px">
+          </figure>
+        </a>
+        </div>
+        <div class="tm-gallery card">
+          <a href="{% static 'website/img/making/fwdworkingpicture/20140307_123923.jpg' %}">
+            <figure class="effect-honey card-img-top">
+              <img src="{% static 'website/img/making/fwdworkingpicture/20140307_123923.jpg' %}"alt="Image 1" class="img-fluid" style="width:400px;height:500px">
+            </figure>
+          </a>
+          </div>
+          <div class="tm-gallery card">
+            <a href="{% static 'website/img/making/fwdworkingpicture/IMG_0726.jpg' %}">
+              <figure class="effect-honey card-img-top">
+                <img src="{% static 'website/img/making/fwdworkingpicture/IMG_0726.jpg' %}"alt="Image 1" class="img-fluid" style="width:400px;height:500px">
+              </figure>
+            </a>
+            </div>  
+    <!-- <div><img src="{% static 'website/img/making/fwdworkingpicture/20140307_123903.jpg' %}" alt="" class="flex-img"></div>
     <div><img src="{% static 'website/img/making/fwdworkingpicture/20140307_123923.jpg' %}" alt="" class="flex-img"></div>
-    <div><img src="{% static 'website/img/making/fwdworkingpicture/IMG_0726.jpg' %}" alt="" class="flex-img"></div>
+    <div><img src="{% static 'website/img/making/fwdworkingpicture/IMG_0726.jpg' %}" alt="" class="flex-img"></div> -->
 </div>
 <div class="flex-box">
     <div><img src="{% static 'website/img/making/fwdworkingpicture/IMG_0727.jpg' %}" alt="" class="flex-img"></div>
