added new class bg_color to change hover bg color

--- a/website/templates/making.html
+++ b/website/templates/making.html
@@ -32,8 +32,8 @@
 .flex-rev{
     flex-direction: row-reverse;
 }
-figure.effect-honey{
-  max-width: 0;
+.bg_color{
+  background: #4a3753;
 }
     </style>
 </head>
