--- a/website/templates/mk1.html
+++ b/website/templates/mk1.html
@@ -7,21 +7,21 @@
 <div class="flex-box">
     <div class="tm-gallery card">
         <a href="{% static 'website/img/making/fwdworkingpicture/20140307_123903.jpg' %}">
-          <figure class="card-img-top">
+          <figure class="bg_color card-img-top">
             <img src="{% static 'website/img/making/fwdworkingpicture/20140307_123903.jpg' %}"alt="Image 1" class="img-fluid" style="width:400px;height:500px">
           </figure>
         </a>
         </div>
         <div class="tm-gallery card">
           <a href="{% static 'website/img/making/fwdworkingpicture/20140307_123923.jpg' %}">
-            <figure class="card-img-top">
+            <figure class="bg_color card-img-top">
               <img src="{% static 'website/img/making/fwdworkingpicture/20140307_123923.jpg' %}"alt="Image 1" class="img-fluid" style="width:400px;height:500px">
             </figure>
           </a>
           </div>
           <div class="tm-gallery card">
             <a href="{% static 'website/img/making/fwdworkingpicture/IMG_0726.jpg' %}">
-              <figure class="card-img-top">
+              <figure class="bg_color card-img-top">
                 <img src="{% static 'website/img/making/fwdworkingpicture/IMG_0726.jpg' %}"alt="Image 1" class="img-fluid" style="width:400px;height:500px">
               </figure>
             </a>
