--- a/website/templates/mk1.html
+++ b/website/templates/mk1.html
@@ -26,21 +26,75 @@
               </figure>
             </a>
             </div>  
-    <!-- <div><img src="{% static 'website/img/making/fwdworkingpicture/20140307_123903.jpg' %}" alt="" class="flex-img"></div>
-    <div><img src="{% static 'website/img/making/fwdworkingpicture/20140307_123923.jpg' %}" alt="" class="flex-img"></div>
-    <div><img src="{% static 'website/img/making/fwdworkingpicture/IMG_0726.jpg' %}" alt="" class="flex-img"></div> -->
 </div>
 <div class="flex-box">
-    <div><img src="{% static 'website/img/making/fwdworkingpicture/IMG_0727.jpg' %}" alt="" class="flex-img"></div>
-    <div><img src="{% static 'website/img/making/fwdworkingpicture/IMG_0743.jpg' %}" alt="" class="flex-img"></div>
-    <div><img src="{% static 'website/img/making/fwdworkingpicture/IMG_0906.jpg' %}" alt="" class="flex-img"></div>
+    <div class="tm-gallery card">
+        <a href="{% static 'website/img/making/fwdworkingpicture/IMG_0727.jpg' %}">
+          <figure class="card-img-top">
+            <img src="{% static 'website/img/making/fwdworkingpicture/IMG_0727.jpg' %}"alt="Image 1" class="img-fluid" style="width:400px;height:500px">
+          </figure>
+        </a>
+        </div>
+        <div class="tm-gallery card">
+          <a href="{% static 'website/img/making/fwdworkingpicture/IMG_0743.jpg' %}">
+            <figure class="card-img-top">
+              <img src="{% static 'website/img/making/fwdworkingpicture/IMG_0743.jpg' %}"alt="Image 1" class="img-fluid" style="width:400px;height:500px">
+            </figure>
+          </a>
+          </div>
+          <div class="tm-gallery card">
+            <a href="{% static 'website/img/making/fwdworkingpicture/IMG_0906.jpg' %}">
+              <figure class="card-img-top">
+                <img src="{% static 'website/img/making/fwdworkingpicture/IMG_0906.jpg' %}"alt="Image 1" class="img-fluid" style="width:400px;height:500px">
+              </figure>
+            </a>
+            </div>  
 </div>
 <div class="flex-box">
-    <div><img src="{% static 'website/img/making/fwdworkingpicture2/20150211_112325.jpg' %}" alt="" class="flex-img"></div>
-    <div><img src="{% static 'website/img/making/fwdworkingpicture2/20150211_112339.jpg' %}" alt="" class="flex-img"></div>
-    <div><img src="{% static 'website/img/making/fwdworkingpicture2/20150218_151025.jpg' %}" alt="" class="flex-img"></div>
+    <div class="tm-gallery card">
+        <a href="{% static 'website/img/making/fwdworkingpicture2/20150211_112325.jpg' %}">
+          <figure class="card-img-top">
+            <img src="{% static 'website/img/making/fwdworkingpicture2/20150211_112325.jpg' %}"alt="Image 1" class="img-fluid" style="width:400px;height:500px">
+          </figure>
+        </a>
+        </div>
+        <div class="tm-gallery card">
+          <a href="{% static 'website/img/making/fwdworkingpicture2/20150211_112339.jpg' %}">
+            <figure class="card-img-top">
+              <img src="{% static 'website/img/making/fwdworkingpicture2/20150211_112339.jpg' %}"alt="Image 1" class="img-fluid" style="width:400px;height:500px">
+            </figure>
+          </a>
+          </div>
+          <div class="tm-gallery card">
+            <a href="{% static 'website/img/making/fwdworkingpicture2/20150218_151025.jpg' %}">
+              <figure class="card-img-top">
+                <img src="{% static 'website/img/making/fwdworkingpicture2/20150218_151025.jpg' %}"alt="Image 1" class="img-fluid" style="width:400px;height:500px">
+              </figure>
+            </a>
+            </div>  
 </div>
 <div class="flex-box">
+    <div class="tm-gallery card">
+        <a href="{% static 'website/img/making/fwdworkingpicture2/20150303_163427.jpg' %}">
+          <figure class="card-img-top">
+            <img src="{% static 'website/img/making/fwdworkingpicture2/20150303_163427.jpg' %}"alt="Image 1" class="img-fluid" style="width:400px;height:500px">
+          </figure>
+        </a>
+        </div>
+        <div class="tm-gallery card">
+          <a href="{% static 'website/img/making/fwdworkingpicture2/20150417_122033.jpg' %}">
+            <figure class="card-img-top">
+              <img src="{% static 'website/img/making/fwdworkingpicture2/20150417_122033.jpg' %}"alt="Image 1" class="img-fluid" style="width:400px;height:500px">
+            </figure>
+          </a>
+          </div>
+          <div class="tm-gallery card">
+            <a href="{% static 'website/img/making/fwdworkingpicture2/20150720_143132.jpg' %}">
+              <figure class="card-img-top">
+                <img src="{% static 'website/img/making/fwdworkingpicture2/20150720_143132.jpg' %}"alt="Image 1" class="img-fluid" style="width:400px;height:500px">
+              </figure>
+            </a>
+            </div>  
     <div><img src="{% static 'website/img/making/fwdworkingpicture2/20150303_163427.jpg' %}" alt="" class="flex-img"></div>
     <div><img src="{% static 'website/img/making/fwdworkingpicture2/20150417_122033.jpg' %}" alt="" class="flex-img"></div>
     <div><img src="{% static 'website/img/making/fwdworkingpicture2/20150720_143132.jpg' %}" alt="" class="flex-img"></div>
