--- a/website/templates/mk2.html
+++ b/website/templates/mk2.html
@@ -5,24 +5,74 @@
 
 {% block body %}
 <div class="flex-box">
-    <div><img src="{% static 'website/img/making/fwdworkingpicture2/20151018_161424.jpg' %}" alt="" class="flex-img"></div>
-    <div><img src="{% static 'website/img/making/fwdworkingpicture2/20151204_115108.jpg' %}" alt="" class="flex-img"></div>
-    <div><img src="{% static 'website/img/making/fwdworkingpicture2/IMG_0152.jpg' %}" alt="" class="flex-img"></div>
+    <div class="tm-gallery card">
+        <a href="{% static 'website/img/making/fwdworkingpicture2/20151018_161424.jpg' %}">
+          <figure class="card-img-top">
+            <img src="{% static 'website/img/making/fwdworkingpicture2/20151018_161424.jpg' %}"alt="Image 1" class="img-fluid" style="width:400px;height:500px">
+          </figure>
+        </a>
+        </div>
+        <div class="tm-gallery card">
+          <a href="{% static 'website/img/making/fwdworkingpicture2/20151204_115108.jpg' %}">
+            <figure class="card-img-top">
+              <img src="{% static 'website/img/making/fwdworkingpicture2/20151204_115108.jpg' %}"alt="Image 1" class="img-fluid" style="width:400px;height:500px">
+            </figure>
+          </a>
+          </div>
+          <div class="tm-gallery card">
+            <a href="{% static 'website/img/making/fwdworkingpicture2/IMG_0152.jpg' %}">
+              <figure class="card-img-top">
+                <img src="{% static 'website/img/making/fwdworkingpicture2/IMG_0152.jpg' %}"alt="Image 1" class="img-fluid" style="width:400px;height:500px">
+              </figure>
+            </a>
+            </div>  
 </div>
 <div class="flex-box">
-    <div><img src="{% static 'website/img/making/fwdworkingpicture2/IMG_0192.jpg' %}" alt="" class="flex-img"></div>
-    <div><img src="{% static 'website/img/making/fwdworkingpicture3/2014-09-08.jpg' %}" alt="" class="flex-img"></div>
-    <div><img src="{% static 'website/img/making/fwdworkingpicture3/20140619_172217.jpg' %}" alt="" class="flex-img"></div>
+    <div class="tm-gallery card">
+        <a href="{% static 'website/img/making/fwdworkingpicture2/IMG_0192.jpg' %}">
+          <figure class="card-img-top">
+            <img src="{% static 'website/img/making/fwdworkingpicture2/IMG_0192.jpg' %}"alt="Image 1" class="img-fluid" style="width:400px;height:500px">
+          </figure>
+        </a>
+        </div>
+        <div class="tm-gallery card">
+          <a href="{% static 'website/img/making/fwdworkingpicture2/20151204_115108.jpg' %}">
+            <figure class="card-img-top">
+              <img src="{% static 'website/img/making/fwdworkingpicture2/20151204_115108.jpg' %}"alt="Image 1" class="img-fluid" style="width:400px;height:500px">
+            </figure>
+          </a>
+          </div>
+          <div class="tm-gallery card">
+            <a href="{% static 'website/img/making/fwdworkingpicture3/20140619_172217.jpg' %}">
+              <figure class="card-img-top">
+                <img src="{% static 'website/img/making/fwdworkingpicture3/20140619_172217.jpg' %}"alt="Image 1" class="img-fluid" style="width:400px;height:500px">
+              </figure>
+            </a>
+            </div>  
 </div>
 <div class="flex-box">
-    <div><img src="{% static 'website/img/making/fwdworkingpicture3/20140908_125347~2.jpg' %}" alt="" class="flex-img"></div>
-    <div><img src="{% static 'website/img/making/fwdworkingpicture3/DSC03999.jpg' %}" alt="" class="flex-img"></div>
-    <div><img src="{% static 'website/img/making/fwdworkingpicture3/DSC04008.jpg' %}" alt="" class="flex-img"></div>
+    <div class="tm-gallery card">
+        <a href="{% static 'website/img/making/fwdworkingpicture3/20140908_125347~2.jpg' %}">
+          <figure class="card-img-top">
+            <img src="{% static 'website/img/making/fwdworkingpicture3/20140908_125347~2.jpg' %}"alt="Image 1" class="img-fluid" style="width:400px;height:500px">
+          </figure>
+        </a>
+        </div>
+        <div class="tm-gallery card">
+          <a href="{% static 'website/img/making/fwdworkingpicture3/DSC03999.jpg' %}">
+            <figure class="card-img-top">
+              <img src="{% static 'website/img/making/fwdworkingpicture3/DSC03999.jpg' %}"alt="Image 1" class="img-fluid" style="width:400px;height:500px">
+            </figure>
+          </a>
+          </div>
+          <div class="tm-gallery card">
+            <a href="{% static 'website/img/making/fwdworkingpicture3/DSC04008.jpg' %}">
+              <figure class="card-img-top">
+                <img src="{% static 'website/img/making/fwdworkingpicture3/DSC04008.jpg' %}"alt="Image 1" class="img-fluid" style="width:400px;height:500px">
+              </figure>
+            </a>
+            </div>
 </div>
-<div class="flex-box">
-    <div><img src="{% static 'website/img/making/fwdworkingpicture3/DSC04197.jpg' %}" alt="" class="flex-img"></div>
-    <div><img src="{% static 'website/img/making/fwdworkingpicture4/DSC03804.jpg' %}" alt="" class="flex-img"></div>
-    <div><img src="{% static 'website/img/making/fwdworkingpicture4/DSC03815.jpg' %}" alt="" class="flex-img"></div>
-</div>
+
 
 {% endblock %}
