--- a/website/templates/mk3.html
+++ b/website/templates/mk3.html
@@ -5,29 +5,73 @@
 
 {% block body %}
 <div class="flex-box">
-    <div><img src="{% static 'website/img/making/fwdworkingpicture4/IMG_4161.jpg' %}" alt="" class="flex-img"></div>
-    <div><img src="{% static 'website/img/making/fwdworkingpicture4/IMG_4164.jpg' %}" alt="" class="flex-img"></div>
-    <div><img src="{% static 'website/img/making/fwdworkingpicture4/IMG_4279.jpg' %}" alt="" class="flex-img"></div>
+    <div class="tm-gallery card">
+        <a href="{% static 'website/img/making/fwdworkingpicture4/IMG_4284.jpg' %}">
+          <figure class="card-img-top">
+            <img src="{% static 'website/img/making/fwdworkingpicture4/IMG_4284.jpg' %}"alt="Image 1" class="img-fluid" style="width:400px;height:500px">
+          </figure>
+        </a>
+        </div>
+        <div class="tm-gallery card">
+          <a href="{% static 'website/img/making/fwdworkingpicture4/IMG_4302.jpg' %}">
+            <figure class="card-img-top">
+              <img src="{% static 'website/img/making/fwdworkingpicture4/IMG_4302.jpg' %}"alt="Image 1" class="img-fluid" style="width:400px;height:500px">
+            </figure>
+          </a>
+          </div>
+          <div class="tm-gallery card">
+            <a href="{% static 'website/img/making/fwdworkingpicture4/IMG_20200816_164309.jpg' %}">
+              <figure class="card-img-top">
+                <img src="{% static 'website/img/making/fwdworkingpicture4/IMG_20200816_164309.jpg' %}"alt="Image 1" class="img-fluid" style="width:400px;height:500px">
+              </figure>
+            </a>
+            </div>
 </div>
 <div class="flex-box">
-    <div><img src="{% static 'website/img/making/fwdworkingpicture4/IMG_4284.jpg' %}" alt="" class="flex-img"></div>
-    <div><img src="{% static 'website/img/making/fwdworkingpicture4/IMG_4302.jpg' %}" alt="" class="flex-img"></div>
-    <div><img src="{% static 'website/img/making/fwdworkingpicture4/IMG_20200816_164309.jpg' %}" alt="" class="flex-img"></div>
+    <div class="tm-gallery card">
+        <a href="{% static 'website/img/making/fwdworkingpicture5/20150126_150459.jpg' %}">
+          <figure class="card-img-top">
+            <img src="{% static 'website/img/making/fwdworkingpicture5/20150126_150459.jpg' %}"alt="Image 1" class="img-fluid" style="width:400px;height:500px">
+          </figure>
+        </a>
+        </div>
+        <div class="tm-gallery card">
+          <a href="{% static 'website/img/making/fwdworkingpicture5/20150202_093305.jpg' %}">
+            <figure class="card-img-top">
+              <img src="{% static 'website/img/making/fwdworkingpicture5/20150202_093305.jpg' %}"alt="Image 1" class="img-fluid" style="width:400px;height:500px">
+            </figure>
+          </a>
+          </div>
+          <div class="tm-gallery card">
+            <a href="{% static 'website/img/making/fwdworkingpicture5/20150206_151350.jpg' %}">
+              <figure class="card-img-top">
+                <img src="{% static 'website/img/making/fwdworkingpicture5/20150206_151350.jpg' %}"alt="Image 1" class="img-fluid" style="width:400px;height:500px">
+              </figure>
+            </a>
+            </div>
 </div>
 <div class="flex-box">
-    <div><img src="{% static 'website/img/making/fwdworkingpicture5/2014-10-10 18.29.42.jpg' %}" alt="" class="flex-img"></div>
-    <div><img src="{% static 'website/img/making/fwdworkingpicture5/20141009_144029.jpg' %}" alt="" class="flex-img"></div>
-    <div><img src="{% static 'website/img/making/fwdworkingpicture5/20150126_141020.jpg' %}" alt="" class="flex-img"></div>
-</div>
-<div class="flex-box">
-    <div><img src="{% static 'website/img/making/fwdworkingpicture5/20150126_150459.jpg' %}" alt="" class="flex-img"></div>
-    <div><img src="{% static 'website/img/making/fwdworkingpicture5/20150202_093305.jpg' %}" alt="" class="flex-img"></div>
-    <div><img src="{% static 'website/img/making/fwdworkingpicture5/20150206_151350.jpg' %}" alt="" class="flex-img"></div>
-</div>
-<div class="flex-box">
-    <div><img src="{% static 'website/img/making/fwdworkingpicture5/20150208_122613.jpg' %}" alt="" class="flex-img"></div>
-    <div><img src="{% static 'website/img/making/fwdworkingpicture5/20150212_114912.jpg' %}" alt="" class="flex-img"></div>
-    <div><img src="{% static 'website/img/making/fwdworkingpicture5/IMG_20150203_221353.jpg' %}" alt="" class="flex-img"></div>
+    <div class="tm-gallery card">
+        <a href="{% static 'website/img/making/fwdworkingpicture5/20150208_122613.jpg' %}">
+          <figure class="card-img-top">
+            <img src="{% static 'website/img/making/fwdworkingpicture5/20150208_122613.jpg' %}"alt="Image 1" class="img-fluid" style="width:400px;height:500px">
+          </figure>
+        </a>
+        </div>
+        <div class="tm-gallery card">
+          <a href="{% static 'website/img/making/fwdworkingpicture5/20150212_114912.jpg' %}">
+            <figure class="card-img-top">
+              <img src="{% static 'website/img/making/fwdworkingpicture5/20150212_114912.jpg' %}"alt="Image 1" class="img-fluid" style="width:400px;height:500px">
+            </figure>
+          </a>
+          </div>
+          <div class="tm-gallery card">
+            <a href="{% static 'website/img/making/fwdworkingpicture5/IMG_20150203_221353.jpg' %}">
+              <figure class="card-img-top">
+                <img src="{% static 'website/img/making/fwdworkingpicture5/IMG_20150203_221353.jpg' %}"alt="Image 1" class="img-fluid" style="width:400px;height:500px">
+              </figure>
+            </a>
+            </div>
 </div>
 
 {% endblock %}
