--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -84,72 +84,32 @@
             <div class="row tm-content-box"><!-- first row -->
                 <div class="col-lg-12 col-xl-12">
                     <div class="tm-intro-text-container">
-                        <h2 class="tm-text-primary mb-4 tm-section-title">What We Do</h2>
+                        <h2 class="tm-text-primary mb-4 tm-section-title">About Us</h2>
                         <p class="mb-4 tm-intro-text">
-                          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut egestas erat non nibh sodales commodo. Quisque ut arcu eu magna molestie hendrerit ut accumsan nibh. Duis pulvinar, metus id egestas semper, lectus mauris condimentum nisl, ac tincidunt lorem libero vitae mauris. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Duis lacinia lacinia mi, quis venenatis nisl mollis sit amet. <a href="https://googlr.com">Link to somewhere</a>.</p>
+                          Handicrafts of Nepal itself is needless of any introduction. In every corner of Kathmandu valley, you will find masterpieces of crafts and arts. The skill and techniques and excellent craftsmanship have been handed down from generation to generation, which represents the talent and skill of craftsmen and reflects the social, religious, and cultural values found in different parts of the country.</p>
                     </div>
                 </div>
-
+                <div class="col-lg-12 col-xl-12">
+                  <div class="tm-intro-text-container">
+                      <p class="mb-4 tm-intro-text">
+                        <b>Sanskar Handicrafts</b> is the place where you will find statues with excellent craftmanship.<b>Sanskar Handicrafts</b> is a gallery affiliated with <b>Siddhi Hastakala Udhyog</b>, a renowned fine arts and crafts name.</p>
+                  </div>
+              </div>
             </div><!-- first row -->
             
-            <div class="row tm-content-box"><!-- second row -->
-        		<div class="col-lg-1">
-                    <i class="far fa-3x fa-chart-bar text-center tm-icon"></i>
-                </div>
-                <div class="col-lg-5">
-                    <div class="tm-intro-text-container">
-                        <h2 class="tm-text-primary mb-4">Pont 1</h2>
-                        <p class="mb-4 tm-intro-text">
-                          Praesent sed pharetra lorem, blandit convallis mi. Aenean ornare elit ac metus lacinia, sed iaculis nibh semper. Pellentesque est urna.</p>
-                    </div>
-                </div>
-                
-                <div class="col-lg-1">
-                    <i class="far fa-3x fa-comment-alt text-center tm-icon"></i>
-                </div>
-                <div class="col-lg-5">
-                    <div class="tm-intro-text-container">
-                        <h2 class="tm-text-primary mb-4">Point 2</h2>
-                        <p class="mb-4 tm-intro-text">
-                          Armain gos <a rel="nofollow" href="https://www.google.com">Link</a>Donec aliquam volutpat justo, a pharetra ligula. Donec auctor, ante sit amet vulputate suscipit, neque ante blandit diam, aliquet cursus nibh lectus et justo. Cras condimentum mi et sapien dignissim luctus.</p>
-                    </div>
-                </div>
-
-            </div><!-- second row -->
-            
-            <div class="row tm-content-box"><!-- third row -->
-        		<div class="col-lg-1">
-                    <!-- <i class="fas fa-3x fa-fingerprint text-center tm-icon"></i> -->
-                    <i class="far fa-3x fa-address-book text-center tm-icon"></i>
-                </div>
-                <div class="col-lg-5">
-                    <div class="tm-intro-text-container">
-                        <h2 class="tm-text-primary mb-4">Point 3</h2>
-                        <p class="mb-4 tm-intro-text">
-                      Dones <strong>Bold Woow</strong> Ut pharetra velit maximus, imperdiet metus vel, mattis libero. Nam luctus molestie vehicula. Sed hendrerit, ligula in maximus mattis, risus dui convallis enim, non molestie sapien ante nec quam. Pellentesque est  <i>Italiano</i> massa, iaculis et sollicitudin sed, aliquet vel urna.</p>
-                          
-                          <div class="tm-continue">
-                            <a href="http://www.google.com" class="tm-intro-text tm-btn-primary">Learn More</a>
-                        </div>
-                    </div>
-                </div>
-                
-                <div class="col-lg-1">
-                    <i class="fas fa-3x fa-users text-center tm-icon"></i>
-                </div>
-                <div class="col-lg-5">
-                    <div class="tm-intro-text-container">
-                      <h2 class="tm-text-primary mb-4">Point 4</h2>
-                        <p class="mb-4 tm-intro-text">
-                      Dopsla Ut <a href="https://google.com">Another Link wow</a> Donec libero libero, commodo a odio at, ornare aliquet dui. Quisque mi ipsum, elementum a lorem id, vestibulum laoreet ante. Donec sed urna sit amet diam bibendum cursus vitae sit amet ex. Etiam a nulla vel nibh aliquet lobortis. Donec dui massa, molestie non risus id, sagittis pellentesque tortor.</p>
-                          
-                          <div class="tm-continue">
-                            <a href="#testimonials" class="tm-intro-text tm-btn-primary">Details</a>
-                        </div>
-                    </div>
-                </div>
-
-            </div><!-- third row -->
+            <div class="flex-box">
+              <div><img src="img/Shakyamuni Set.JPG" alt="" class="flex-img"></div>
+              <div class="flex-text">
+                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer ultrices malesuada ante quis pharetra. Nullam notn bibendum dolor. Ut vel turpis accumsan, efficitur dolor fermentum, tincidunt metus. Etiam ut ultrices nibh.  Etiam aliquam mauris non hendrerit faucibus. Proin pulvinar congue  ex, vitae commodo. Phasellus condimentum, mi ut sodales gravida.</p>                            
+              </div>
+          </div>
+          <div class="flex-box">
+              <div><img src="img/Shakyamuni Set.JPG" alt="" class="flex-img"></div>
+              <div class="flex-text">
+                  <h5>Drak liak</h5>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer ultrices malesuada ante quis pharetra. Nullam notn bibendum dolor. Ut vel turpis accumsan, efficitur dolor fermentum, tincidunt metus. Etiam ut ultrices nibh.  Etiam aliquam mauris non hendrerit faucibus. Proin pulvinar congue  ex, vitae commodo. Phasellus condimentum, mi ut sodales gravida.</p>                            
+              </div>
+          </div>                              
 
         </div>
       
