--- a/website/templates/making.html
+++ b/website/templates/making.html
@@ -76,7 +76,7 @@
             {% block body %}
             {% endblock %}
               <nav aria-label="Page navigation example">
-  <ul class="pagination pagination-lg justify-content-center" >
+  <ul class="pagination pagination-lg justify-content-center" style="padding-top:10px">
     <li class="page-item">
       <a class="page-link" href="/{{prev}}" aria-label="Previous">
         <span aria-hidden="true" style="font-size:40px; color: #369">&laquo;</span>
