Changed What we do into about us in nav bars

--- a/website/templates/gallery.html
+++ b/website/templates/gallery.html
@@ -41,7 +41,7 @@
                   <a class="nav-link tm-nav-link" href="#infinite" id="home1">Home</a>
               </li>
               <li class="nav-item">
-                  <a class="nav-link tm-nav-link" href="/" id="wwd">What We Do</a>
+                  <a class="nav-link tm-nav-link" href="/" id="wwd">About Us</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link tm-nav-link" href="#gallery">Gallery</a>
