--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -54,7 +54,7 @@
                   <a class="nav-link tm-nav-link" href="#infinite">Home</a>
               </li>
               <li class="nav-item">
-                  <a class="nav-link tm-nav-link" href="#whatwedo">What We Do</a>
+                  <a class="nav-link tm-nav-link" href="#whatwedo">About Us</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link tm-nav-link" href="#gallery">Gallery</a>
