--- a/website/templates/making.html
+++ b/website/templates/making.html
@@ -56,7 +56,7 @@
                   <a class="nav-link tm-nav-link" href="/" id="home1">Home</a>
               </li>
               <li class="nav-item">
-                  <a class="nav-link tm-nav-link" href="/" id="wwd">What We Do</a>
+                  <a class="nav-link tm-nav-link" href="/" id="wwd">About Us</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link tm-nav-link" href="/" id="gallery">Gallery</a>
