Missed bolding name

--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -101,7 +101,7 @@
               <div><img src="img/Shakyamuni Set.JPG" alt="" class="flex-img"></div>
               <div class="flex-text">
                   <h5>Our respected grandfather</h5>
-                  <p>The legendary artisan, Late Mr. SIDDHI RAJ SHAKYA, needs no introduction. He is a big name, a brand, in the world of arts and crafts. His work and his contribution to art and culture is impeccable.</p>                            
+                  <p>The legendary artisan, Late Mr. <b>SIDDHI RAJ SHAKYA</b>, needs no introduction. He is a big name, a brand, in the world of arts and crafts. His work and his contribution to art and culture is impeccable.</p>                            
               </div>
           </div>
           <div class="flex-box">
