--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -32,6 +32,18 @@
   #view > a{
     color: #FFF;
   }
+  .flex-img{
+    max-width: 500px;
+    max-height: 400px;
+    padding: 20px;
+}
+.flex-text{
+    padding: 20px;
+    max-width: 500px;
+}
+.flex-rev{
+    flex-direction: row-reverse;
+}
 </style>
   </head>
   <body>    
@@ -98,7 +110,7 @@
             </div><!-- first row -->
             
             <div class="flex-box">
-              <div><img src="{% static 'website/img/Man2.jpg' %}" alt="" class="flex-img"></div>
+              <div><img src="{% static 'website/img/Man1.jpg' %}" alt="" class="flex-img"></div>
               <div class="flex-text">
                   <h5>Our respected grandfather</h5>
                   <p>The legendary artisan, Late Mr. <b>SIDDHI RAJ SHAKYA</b>, needs no introduction. He is a big name, a brand, in the world of arts and crafts. His work and his contribution to art and culture is impeccable.</p>                            
@@ -112,7 +124,7 @@
               </div>
           </div>                              
           <div class="flex-box">
-            <div><img src="{% static 'website/img/Man3.jpg' %}" alt="" class="flex-img"></div>
+            <div><img src="{% static 'website/img/Man1.jpg' %}" alt="" class="flex-img"></div>
             <div class="flex-text">
                 <h5>Proprietor of Siddhi Hastakala Udhyog</h5>
                 <p>The skill, techniques, and talent have been passed down from generation to generation. His grandson, Mr. <b>Sabin Shakya</b>, being the 4th generation to this elite group, proprietor of Siddhi Hastakala Udhyog, has been continuing the family's legacy. </p>                            
