fixing images not found 1.5

--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -116,7 +116,7 @@
             </div><!-- first row -->
             
             <div class="flex-box">
-              <div><img src="{% static 'website/img/Gramps.jpg' %}" alt="" class="flex-img"></div>
+              <div><img src="{% static 'website/img/White Tara.JPG' %}" alt="" class="flex-img"></div>
               <div class="flex-text">
                   <h5>Our respected grandfather</h5>
                   <p>The legendary artisan, Late Mr. <b>SIDDHI RAJ SHAKYA</b>, needs no introduction. He is a big name, a brand, in the world of arts and crafts. His work and his contribution to art and culture is impeccable.</p>                            
