Trying to change the background image 1.6

--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -50,6 +50,9 @@
 .flex-rev{
     flex-direction: row-reverse;
 }
+#infinite{
+  background-image: url(../img/infinite-loop-01.jpg);
+}
 </style>
   </head>
   <body>    
