Changed about us

--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -111,7 +111,16 @@
                 <div class="col-lg-12 col-xl-12">
                   <div class="tm-intro-text-container">
                       <p class="mb-4 tm-intro-text">
-                        <b>Sanskar Handicrafts</b> is the place where you will find statues with excellent craftmanship.<b>Sanskar Handicrafts</b> is a gallery affiliated with <b>Siddhi Hastakala Udhyog</b>, a renowned fine arts and crafts name.</p>
+                        Handicrafts of Nepal, itself is needless of any introduction. In each and every
+corner of Kathmandu valley you will find the masterpieces of crafts and arts.
+The skill and techniques, the excellent craftsmanship have been handed down
+from generation to generation which represents the talent and skill of
+craftsmen and also reflects the social, religious and cultural values found in
+different parts of the country.
+
+Sanskar Handicrafts is the place where you might find the statues with
+excellence craftmanship. Sanskar Handicrafts is a gallery affiliated to Siddhi
+Hastakala Udhyog, a renowned name for fine arts and crafts.</p>
                   </div>
               </div>
             </div><!-- first row -->
