Changed about us 1.1

--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -118,9 +118,9 @@ from generation to generation which represents the talent and skill of
 craftsmen and also reflects the social, religious and cultural values found in
 different parts of the country.
 
-Sanskar Handicrafts is the place where you might find the statues with
-excellence craftmanship. Sanskar Handicrafts is a gallery affiliated to Siddhi
-Hastakala Udhyog, a renowned name for fine arts and crafts.</p>
+<b>Sanskar Handicrafts</b> is the place where you might find the statues with
+excellence craftmanship. <b>Sanskar Handicrafts</b> is a gallery affiliated to <b>Siddhi
+  Hastakala Udhyog</b>, a renowned name for fine arts and crafts.</p>
                   </div>
               </div>
             </div><!-- first row -->
