trying to fix mobile screen resolution issue

--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -15,6 +15,12 @@
     <link rel="stylesheet" href="{% static 'website/css/style.css' %}" />
 
 <style>
+  
+  * {
+    margin: 0;
+    padding: 0;
+}
+
   #view{
     text-align: center;
     padding: 10px 10px;
